--- a/styles/website.css
+++ b/styles/website.css
@@ -3,7 +3,7 @@
 	height:593px;
 	margin-left:auto;
 	margin-right:auto;
-	background-image:url(/images/iphone.png);
+	background-image:url(../images/iphone.png);
 }
 
 .demo-phone iframe {
